[package]
name = "iife"
description = "A macro with a better syntax for immediately invoked function expressions"
authors = ["kpids <wkpids@gmail.com>"]
version = "1.0.0"
documentation = "https://docs.rs/iife"
keywords = ["iife", "Immediately Executed Function", "Immediately Invoked Function Expression", "macro"]
repository = "https://github.com/kpids/iife"
readme = "README.md"
categories = ["no-std"]
edition = "2021"
license = "MIT"

[dev-dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
